2005/10/13	muppetman

	* MANIFEST: update with missing entries.

2005/10/10	kaffeetisch

	Patch from Marc Lehmann:

	* t/GdkGC.t, xs/GdkGC.xs: Allow undef for the argument of
	Gtk2::Gdk::GC::set_clip_mask, set_clip_rectangle, and
	set_clip_region.

	* xs/GdkPixbuf.xs: Don't leak the return value of
	gdk_pixbuf_composite_color_simple.

2005/10/05	kaffeetisch

	Merge from stable-1-10:

	* NEWS: Add the 1.101 release notes.

	* t/01.GtkWindow.t, t/GdkEvent.t, t/GdkWindow.t,
	t/GtkAccelGroupt.t, t/GtkAccelMap.t, t/GtkStock.t,
	t/GtkTreeModelIface.t, t/GtkWidget.t: Change the flags tests yet
	again.  Make them explicit this time by using is_deeply() and
	\@{}, '>=' or 'eq' so it hopefully works with any version of
	Test::More.

	* t/GtkFileChooser.t: Patch from Scott Lanning fixes a test
	problem.

2005/09/30	kaffeetisch

	* t/GtkFileChooser.t: Add yet another TODO for a new failure that
	surfaced recently.

	Wrap some stuff from gtk+ 2.8 that we missed:

	* t/GtkAboutDialog.t, xs/GtkAboutDialog.xs: Bind and test
	gtk_about_dialog_get_wrap_license,
	gtk_about_dialog_set_wrap_license.

	* t/GtkDnd.t, xs/GtkDnd.xs: Bind and test gtk_drag_set_icon_name.

2005/09/30	kaffeetisch

	Make gdk's and pango's cairo glue available if the Perl module
	Cairo is installed:

	* Gtk2.pm, Makefile.PL: Optionally depend on Cairo.

	* maps_pango-1.10: Add PANGO_TYPE_CAIRO_FONT_MAP.

	* t/GdkCairo.t, xs/GdkCairo.xs: Bind and test gdk_cairo_create,
	gdk_cairo_set_source_color, gdk_cairo_set_source_pixbuf,
	gdk_cairo_rectangle, gdk_cairo_region.

	* t/PangoCairo.t, xs/PangoCairo.xs: Bind and test
	pango_cairo_font_map_new, pango_cairo_font_map_set_resolution,
	pango_cairo_font_map_get_resolution,
	pango_cairo_font_map_create_context, pango_cairo_update_context,
	pango_cairo_create_layout, pango_cairo_update_layout,
	pango_cairo_show_glyph_string, pango_cairo_show_layout,
	pango_cairo_glyph_string_path, pango_cairo_layout_path,
	pango_cairo_context_set_font_options,